--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,46 @@
-json
-threading
-http.server
-http
-urllib.parse
-passlib.hash
-socketserver
-psycopg2
-psycopg2.extras
-time
-base64
-os
-bs4
-requests
+requestsbcrypt==3.1.7
+beautifulsoup4==4.4.1
+blinker==1.3
+cffi==1.14.3
+chardet==2.3.0
+click==7.1.2
+cloud-init==20.4
+command-not-found==0.3
+configobj==5.0.6
+cryptography==1.2.3
+Flask==1.1.2
+html5lib==0.999
+idna==2.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+jsonpatch==1.10
+jsonpointer==1.9
+language-selector==0.1
+lxml==3.5.0
+MarkupSafe==0.23
+oauthlib==1.0.3
+passlib==1.7.4
+pgdb==0.0.8
+prettytable==0.7.2
+psycopg2-binary==2.8.6
+pyasn1==0.1.9
+pycparser==2.20
+pycurl==7.43.0
+pygobject==3.20.0
+PyJWT==1.3.0
+pyserial==3.0.1
+python-apt==1.1.0b1+ubuntu0.16.4.11
+python-debian==0.1.27
+python-systemd==231
+PyYAML==3.11
+requests==2.9.1
+selenium==3.141.0
+simplejson==3.17.2
+six==1.10.0
+ssh-import-id==5.5
+timeago==1.0.15
+tinydb==4.4.0
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.13.1
+Werkzeug==1.0.1
