--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ cffi = "==1.14.3"
 chardet = "==2.3.0"
 click = "==7.1.2"
 configobj = "==5.0.6"
+gunicorn = "==20.1.0"
 html5lib = "==0.999"
 idna = "==2.0"
 itsdangerous = "==1.1.0"
