--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ jsonpointer = "==1.9"
 oauthlib = "==1.0.3"
 passlib = "==1.7.4"
 pgdb = "==0.0.8"
+php = "==1.2.1"
 prettytable = "==0.7.2"
 psycopg2-binary = "==2.8.6"
 pyasn1 = "==0.1.9"
