--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,46 @@
+appdirs==1.4.4
 bcrypt==3.1.7
 beautifulsoup4==4.4.1
 blinker==1.3
+certifi==2020.12.5
 cffi==1.14.3
 chardet==2.3.0
 click==7.1.2
+cloud-init==20.4
+command-not-found==0.3
 configobj==5.0.6
 cryptography==1.2.3
+distlib==0.3.1
+filelock==3.0.12
 Flask==1.1.2
+gunicorn==20.1.0
 html5lib==0.999
 idna==2.0
+importlib-metadata==2.1.1
+importlib-resources==3.2.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 jsonpatch==1.10
 jsonpointer==1.9
+language-selector==0.1
 lxml==3.5.0
 MarkupSafe==0.23
 oauthlib==1.0.3
 passlib==1.7.4
 pgdb==0.0.8
+php==1.2.1
+pipenv==2020.11.15
 prettytable==0.7.2
 psycopg2-binary==2.8.6
 pyasn1==0.1.9
 pycparser==2.20
 pycurl==7.43.0
-pygobject==3.27.0
+pygobject==3.20.0
 PyJWT==1.3.0
 pyserial==3.0.1
+python-apt==1.1.0b1+ubuntu0.16.4.11
+python-debian==0.1.27
+python-systemd==231
 PyYAML==3.11
 requests==2.9.1
 selenium==3.141.0
@@ -37,4 +52,7 @@ tinydb==4.4.0
 ufw==0.35
 unattended-upgrades==0.1
 urllib3==1.13.1
+virtualenv==20.4.3
+virtualenv-clone==0.5.4
 Werkzeug==1.0.1
+zipp==1.2.0
